--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "jquery": "^3.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
